--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-basic-info></app-basic-info>
 <app-about-me></app-about-me>
 <app-experience></app-experience>
+<app-projects></app-projects>
 <app-footer></app-footer>
