--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @import "styles/variable.scss";
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap/scss/bootstrap";
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 
 body {
   margin: 0;
