90% done only project left

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-about-me></app-about-me>
 <app-experience></app-experience>
 <app-projects></app-projects>
+<app-skills></app-skills>
 <app-footer></app-footer>
