--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
         </a>
       </li>
     </ul>
-    <div class="footer-right-bar d-none d-md-block">
+    <div class="mt-5 footer-right-bar d-none d-md-block">
       <a href="mailto:miteshmor47@gmail.com" target="_blank"
         >miteshmor47@gmail.com
       </a>
