--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,6 +27,13 @@
         <ng-template ngbNavContent>Second content</ng-template>
       </li>
       <li ngbNavItem>
+        <a ngbNavLink (click)="scroll('skills')"
+          ><span class="nav-number">03. </span>
+          <span class="underline nav-text"> Skills</span></a
+        >
+        <ng-template ngbNavContent>Second content</ng-template>
+      </li>
+      <li ngbNavItem>
         <a ngbNavLink (click)="scroll('contact')"
           ><span class="nav-number">04. </span>
           <span class="underline nav-text"> Contact</span></a
