--- a/src/app/components/main/projects/projects.component.html
+++ b/src/app/components/main/projects/projects.component.html
@@ -14,50 +14,60 @@
         data-aos="fade-up"
         data-aos-duration="1000"
       >
-        <ng-container>
-          <owl-carousel-o class="owl-carousel-o" [options]="customOptions">
-            <ng-container *ngFor="let img of project.imgs">
-              <ng-template carouselSlide [id]="project.Title + img + i">
-                <div #imgContainer class="img-container">
-                  <img
-                    class="img-feature-proyect rounded"
-                    [src]="img"
-                    [alt]="project.Title"
-                  />
-                  <img
-                    [src]="img"
-                    *ngFor="let img of project.imgs"
-                    data-gallery="myGal"
-                    class="img-feature-proyect rounded"
-                    alt=""
-                    srcset=""
-                  />
-                </div>
-              </ng-template>
-            </ng-container>
-          </owl-carousel-o>
-        </ng-container>
-        <div
-          class="img-feature-proyect-container"
-          data-aos="fade-up"
-          data-aos-duration="1000"
-        >
-          <div class="img-feature-proyect-box">
-            <div class="img-container" style="width: auto">
-              <img
-                class="img-feature-proyect rounded"
-                [src]="project.imgs[0]"
-                [alt]="project.imgs[0]"
-              />
+        <div class="img-container d-none d-md-block">
+          <div
+            id="carouselExampleDark"
+            class="carousel carousel-dark slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div
+                class="carousel-item active"
+                *ngFor="
+                  let img of project.imgs;
+                  let i = index;
+                  let isFirst = first
+                "
+                [class.active]="isFirst"
+              >
+                <img
+                  [src]="img"
+                  class="d-block w-100"
+                  [alt]="'img' + (i + 1)"
+                  (click)="openImageInNewTab('../../../../' + img)"
+                />
+              </div>
             </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="prev"
+              style="color: black"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
-        <div
-          class="h-100 info-right"
-          style="background-image: url('{{ project.imgs }}');"
-        >
+        <div class="h-100">
           <div class="proyect-box">
-            <h4 class="proyect-name text-right">
+            <h4 class="proyect-name">
               {{ project.Title }}
             </h4>
 
@@ -69,7 +79,7 @@
                 <span class="underline technology">{{ technology }}</span>
               </li>
             </ul>
-            <div class="proyect-links text-right">
+            <div class="proyect-links">
               <a
                 *ngIf="project['ghLink']"
                 style="color: inherit"
@@ -81,7 +91,6 @@
           </div>
         </div>
       </div>
-      <div></div>
     </div>
   </div>
 </section>
