--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-experience></app-experience>
 <app-projects></app-projects>
 <app-skills></app-skills>
+<app-contact></app-contact>
 <app-footer></app-footer>
