--- a/src/app/components/main/projects/projects.component.scss
+++ b/src/app/components/main/projects/projects.component.scss
@@ -4,8 +4,8 @@
         height: 360px;
         margin: 100px 0;
         .proyect-box {
-            // display: table-cell;
-            // vertical-align: middle;
+            display: table-cell;
+            vertical-align: middle;
             .proyect-name {
                 font-size: 28px;
                 margin: 0 0 20px;
@@ -78,6 +78,9 @@
             width: 100%;
         }
     }
+    .img-container{
+      margin-top: 55px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -85,6 +88,7 @@
         .proyect-container {
             height: 100% !important;
             margin: 33px 0 !important;
+            margin-top: 75px;
             .proyect-description-box {
                 padding: 5px !important;
                 box-shadow: none !important;
