--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,7 +28,7 @@
       </li>
       <li ngbNavItem>
         <a ngbNavLink (click)="scroll('skills')"
-          ><span class="nav-number">03. </span>
+          ><span class="nav-number">04. </span>
           <span class="underline nav-text"> Skills</span></a
         >
         <ng-template ngbNavContent>Second content</ng-template>
@@ -39,11 +39,6 @@
           <span class="underline nav-text"> Contact</span></a
         >
         <ng-template ngbNavContent>Second content</ng-template>
-      </li>
-      <li ngbNavItem>
-        <a (click)="downloadCV()" class="main-btn cv-btn" ngbNavLink>
-          Resume
-        </a>
       </li>
     </ul>
     <div class="menu-wrapper">
@@ -74,10 +69,10 @@
               <a (click)="scroll('projects')"> <span>03. </span> Projects </a>
             </li>
             <li>
-              <a (click)="scroll('contact')"> <span>04. </span> Contact </a>
+              <a (click)="scroll('skills')"> <span>04. </span> Skills </a>
             </li>
             <li>
-              <a (click)="downloadCV()" class="main-btn cv-btn"> Resume </a>
+              <a (click)="scroll('contact')"> <span>05. </span> Contact </a>
             </li>
           </ol>
         </nav>
