Added some basic changes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,10 @@
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/andresjosehr/" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/mitesh-mor-b6491a1b4/"
+          target="_blank"
+        >
           <i class="fab fa-linkedin-in"></i>
         </a>
       </li>
