--- a/src/app/components/main/basic-info/basic-info.component.html
+++ b/src/app/components/main/basic-info/basic-info.component.html
@@ -11,14 +11,14 @@
         </div>
         <div class="banner-description">
           <p class="mt-4">
-            I have
+            I have more than
             <span class="color-orange">1 years of experience</span> developing
             systems, interfaces, bots, and technological solutions to make the
             web a better place. I am dedicated to writing and refactoring clean,
             reusable, and scalable code in
             <span class="color-orange">Angular</span> and also
-            <span class="color-orange">NodeJS</span> by applying good practices
-            and development standards.
+            <span class="color-orange">NodeJS / NestJS</span> by applying good
+            practices and development standards.
           </p>
         </div>
       </div>
