Added color switcher

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-color-switcher></app-color-switcher>
 <app-basic-info></app-basic-info>
 <app-about-me></app-about-me>
 <app-experience></app-experience>
