--- a/src/app/components/main/skills/skills.component.scss
+++ b/src/app/components/main/skills/skills.component.scss
@@ -11,10 +11,12 @@
   justify-content: center;
   align-items: center;
   margin-right: 20px;
+  margin-bottom: 20px;
   background-color: black;
   height: 6rem;
   width: 6rem;
   border-radius: 50%;
+  box-shadow: 0 0 20px $Orange; /* Adjust the color and intensity as needed */
 }
 
 img {
