--- a/src/app/components/main/color-switcher/color-switcher.component.scss
+++ b/src/app/components/main/color-switcher/color-switcher.component.scss
@@ -52,7 +52,7 @@
 }
 
 #style-switcher ul.pattern .default {
-  background-color: #2d84fb;
+  background-color: #ff5733;
 }
 
 #style-switcher ul.pattern .blue {
