--- a/src/app/components/main/experience/experience.component.scss
+++ b/src/app/components/main/experience/experience.component.scss
@@ -22,6 +22,7 @@
         color: $Orange !important;
         border-color: transparent !important;
         border-radius: 0px;
+        border-left: 2px solid $Orange !important;
     }
 
     a:hover{
@@ -29,6 +30,7 @@
         color: $Orange !important;
         border-color: transparent !important;
         border-radius: 0px;
+        border-left: 2px solid $Orange !important;
     }
 
     a{
