--- a/src/app/components/main/skills/skills.component.html
+++ b/src/app/components/main/skills/skills.component.html
@@ -9,6 +9,8 @@
       </div>
     </div>
     <div
+      data-aos="fade-up"
+      data-aos-duration="1000"
       class="skills-section d-flex flex-row justify-content-between flex-wrap gap-2"
     >
       <div
@@ -20,7 +22,6 @@
         <img [src]="skill.icon" [alt]="'icon' + (i + 1)" />
         <div class="percentage-badge">{{ skill.percentage }}</div>
       </div>
-      <!-- Add more skills as needed -->
     </div>
   </div>
 </section>
