--- a/src/app/components/main/projects/projects.component.html
+++ b/src/app/components/main/projects/projects.component.html
@@ -16,50 +16,38 @@
       >
         <div class="projects-box">
           <div class="img-container">
-            <div
-              id="carouselExampleDark"
-              class="carousel carousel-dark slide"
-              data-bs-ride="carousel"
+            <ngb-carousel
+              #carousel
+              [interval]="2000"
+              [animation]="true"
+              [showNavigationArrows]="project.imgs.length > 1"
+              [showNavigationIndicators]="project.imgs.length > 1"
             >
-              <div class="carousel-inner">
-                <div
-                  class="carousel-item"
-                  *ngFor="let img of project.imgs; let isFirst = first"
-                  [class.active]="isFirst"
-                >
-                  <img
-                    [src]="img"
-                    class="d-block w-100"
-                    [alt]="img"
-                    (click)="openImageInNewTab('../../../../' + img)"
-                  />
-                </div>
-              </div>
-              <button
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev"
+              <ng-container
+                *ngFor="
+                  let img of project.imgs;
+                  let isFirst = first;
+                  let i = index
+                "
               >
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#carouselExampleDark"
-                data-bs-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
+                <ng-template ngbSlide>
+                  <div
+                    class="picsum-img-wrapper"
+                    style="width: 100%; height: 360px"
+                  >
+                    <img
+                      class="object-fit-contain"
+                      [src]="img"
+                      [alt]="img"
+                      height="150"
+                      width="150"
+                      style="width: 100%; height: 100%"
+                      (click)="openImageInNewTab(img)"
+                    />
+                  </div>
+                </ng-template>
+              </ng-container>
+            </ngb-carousel>
           </div>
           <div class="project-details">
             <div class="project-box">
