--- a/src/app/components/main/projects/projects.component.scss
+++ b/src/app/components/main/projects/projects.component.scss
@@ -57,13 +57,14 @@
     h4 {
       font-size: 1.5em;
       margin-bottom: 10px;
+      color: $LightestSlate;
     }
 
     .project-description-box {
       cursor: pointer;
       p {
-        font-size: 1em;
-        color: #555;
+        font-size: 20px;
+        color: $LightSlate;
         margin: 0;
       }
     }
@@ -74,14 +75,37 @@
       align-items: center;
       margin-top: 10px;
 
-      @media (max-width: 1000px) {
-          width: 100%;
-          display: contents;
-        }
+      .project-technology{
+        display: flex;
+
+        @media (max-width: 1000px) {
+            width: 100%;
+            display: contents;
+          }
+
+        @media (max-width: 700px) {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+          }
+      }
+
+
 
       a {
         font-size: 1.5em;
         margin-right: 10px;
+
+        @media (max-width: 700px) {
+          margin-top: 5px;
+          margin-bottom: 5px;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
       }
 
       .technology {
