--- a/src/app/components/main/projects/projects.component.html
+++ b/src/app/components/main/projects/projects.component.html
@@ -66,7 +66,7 @@
                     <i class="fab fa-github"></i>
                   </a>
                 </div>
-                <div class="d-flex">
+                <div class="project-technology">
                   <li
                     class="list-unstyled"
                     *ngFor="let technology of project.Technologies"
